# animo-disconnect

./: .env  .gitignore  CSOPESY.csv  README.md  pyproject.toml
cookies/: instance-0.json  instance-1.json  instance-2.json  instance-3.json  instance-4.json  instance-5.json  instance-6.json  instance-7.json  instance-8.json  instance-9.json
src/animo_tg/: ACCCOB2.csv  ACYITM2.csv  CSC615M.csv  CSOPESY.csv  GETEAMS.csv  LCASEAN.csv  LCFILIB.csv  LCLSTRI.csv  SAS3000.csv  STCLOUD.csv  STCLOUD:3347.csv  auto-enlist.py  auto_enlist.py  course-stealer.py  course_ws_monitor.py  mock_server.py  mock_ws_server.py  output.txt  scraper.py  spawner-concurrent.py  spawner.py  telegram-bot.py  telegram_bot.py
