[project]
name = "animo-tg"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "drissionpage (>=4.1.0.18,<5.0.0.0)",
    "pyquery (>=2.0.1,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "aiohttp (>=3.11.17,<4.0.0)",
    "python-telegram-bot[job-queue] (>=22.0,<23.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]

[tool.poetry]
packages = [{include = "animo_tg", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
